# grocerypanic-backend

./: .coveragerc  .gitignore  .isort.cfg  .pydocstyle  .pydocstyle.tests  .pylint.rc  .readthedocs.yml  .style.yapf  .yapfignore  CONTRIBUTING.md  README.md  admin.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/scripts/: build_container.sh  setup.sh  shellcheck.sh
.github/workflows/: push.yml  release.yml
.github/workflows/scripts/: notifications.sh
assets/: requirements-dev.txt  requirements.txt
development/: Dockerfile
development/bash/: .bash_git  .bash_profile  .bashrc
development/dotfiles/: .vimrc
documentation/source/: conf.py
documentation/source/project/: readme.rst
environments/: README.md  local.env  prod.yaml  stage.yaml
panic/: container_boot.sh  manage.py
panic/appengine/: __init__.py  apps.py  urls.py  views.py
panic/appengine/tests/: test_apps.py  test_views.py
panic/config/: __init__.py  settings.py  settings_apps.py  settings_database.py  settings_email.py  settings_jwt.py  settings_prod.py  settings_registration.py  settings_restframework.py  settings_stage.py
panic/config/environments/: settings_admin.py  settings_local.py  settings_prod.py  settings_stage.py
panic/kitchen/: __init__.py  admin.py  apps.py  exceptions.py  filters.py  pagination.py  permissions.py  swagger.py
panic/kitchen/admin/: __init__.py  item_admin.py  item_model_admin.py  item_model_admin_form.py  item_modeladmin.py  item_modeladmin_form.py  preferred_store_modeladmin.py  preferred_store_modeladmin_form.py
panic/kitchen/exceptions/: __init__.py  handler.py  root_exception_handler.py  validation_exception_handler.py
panic/kitchen/migrations/: 0001_initial.py  0002_auto_20210204_1424.py  0002_transaction_model_changes.py  0003_float_quantities_20210206_1959.py  0004_inventory_20210206_2131.py  0005_transaction_20210217_2100.py  0006_item_properties_20210221_1906.py  0007_item_cache_properties_20210224_1927.py  0008_rename_index_20210301_1629.py  0009_preferred_stores_cascades_20210309_1949.py  0010_bigauto_field_20210609_0150.py  0011_alter_item_shelf_20210907_1746.py  0012_restrict_deletes_20210926_0330.py
panic/kitchen/models/: __init__.py  constants.py  inventory.py  item.py  mixins.py  preferred_store.py  shelf.py  store.py  suggested.py  transaction.py  transaction_managers.py
panic/kitchen/serializers/: __init__.py  bases.py  constants.py  item.py  shelf.py  store.py  suggested.py  transaction.py
panic/kitchen/signals/: item.py  transaction.py
panic/kitchen/tests/: test_exceptions.py  test_models_suggested.py  test_models_transaction_managers.py  test_pendulum.py  test_permissions.py  test_serializers_item.py  test_serializers_shelf.py  test_serializers_suggested.py  test_swagger.py  test_views_item_consumption_history.py  test_views_items.py  test_views_shelf.py  test_views_store.py  test_views_suggested.py  test_views_transaction.py
panic/kitchen/versions/: v1.py
panic/kitchen/views/: bases.py  deprecation.py  item.py  mixins.py  shelf.py  store.py  suggested.py  transaction.py
panic/legal/: apps.py  urls.py  views.py
panic/legal/templates/: privacy.html  tos.html
panic/legal/tests/: test_privacy.py  test_tos.py
panic/naturalsortfield/: __init__.py  fields.py
panic/naturalsortfield/tests/: test_naturalsortfield.py
panic/patches/: patched_access_token.py
panic/patches/tests/: test_patched_access_token.py
panic/root/: __init__.py  urls.py  v1_api.py
panic/root/exceptions/: __init__.py
panic/root/tests/: bases.py  integration_api_v1_kitchen_item.py  integration_api_v1_kitchen_item_consumption.py  integration_api_v1_kitchen_store.py  integration_api_v1_kitchen_transaction.py  integration_api_v1_spa_security_csrf.py
panic/root/tests_integration/: bases.py  integration_api_v1_authentication_and_registation.py  integration_api_v1_authorization_tokens.py  integration_api_v1_kitchen_item.py  integration_api_v1_kitchen_item_activity.py  integration_api_v1_kitchen_shelf.py  integration_api_v1_kitchen_store.py  integration_api_v1_kitchen_transaction.py
panic/root/toctree/: __init__.py
panic/root/urls/: __init__.py  openapi.py
panic/social_accounts/: __init__.py  apps.py  urls.py  views.py
panic/social_accounts/signals/: presocial_login.py
panic/social_accounts/tests/: test_signals.py  test_views.py
panic/social_accounts/utilities/: social_app.py
panic/spa_security/: README.md  __init__.py  apps.py  auth.py  auth_cookie.py  fields.py  mixins.py  urls.py  views.py
panic/spa_security/cookies/: samesite.py
panic/spa_security/middlewares/: samesite.py
panic/spa_security/mixins/: csrf.py
panic/spa_security/tests/: test_auth.py  test_controls_auth.py  test_controls_mixins.py  test_csrf_error_view.py  test_fields.py  test_mixins_csrf.py  test_mixins_samesite.py  test_views_csrf.py  test_views_csrf_error.py
panic/spa_security/views/: csrf_error.py  csrf_token.py
panic/user/: __init__.py  admin.py  apps.py  urls.py  views.py
panic/user/admin/: __init__.py  user_modeladmin.py
panic/user/migrations/: 0001_initial.py  0002_localization_20210211_2018.py  0003_django_upgrade_20210319_1923.py  0004_bigauto_field_20210609150.py
panic/user/models/: __init__.py  user.py
panic/user/serializers/: bases.py  details.py  timezones.py
panic/user/signals/: signup.py
panic/user/tests/: test_views.py
panic/user/utilities/: timezones.py
panic/utilities/: __init__.py  apps.py
panic/utilities/config/: module_cache.py
scripts/: commander.sh
scripts/common/: common.sh  database.sh  documentation.sh  production.sh  release.sh  stage.sh  upload.sh  wheel.sh
scripts/hooks/: pre-commit  pre-push
(+457 files in other folders)
